Fix clipped font on lower resolution displays

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,8 +8,8 @@
 }
 
 .header-text {
-    padding: 1rem;
-    font-size: 26px;
+    padding: 0.25rem 0 0 1rem;
+    font-size: 1.5rem;
     font-weight: bolder;
 }
 
